infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-client-ingress
  namespace: selectgearmotors-ns
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/api/actuator/health"
spec:
  rules:
    - http:
        paths:
          - path: /api/actuator/health
            pathType: Prefix
            backend:
              service:
                name: api-client-service
                port:
                  number: 9914
